feature 适配2024.2